--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -1,7 +1,11 @@
 {
     "compilerOptions": {
         "baseUrl": ".",
-        "paths": {},
+        "paths": {
+            "c/lWCDEMO": [
+                "lWCDEMO/lWCDEMO.js"
+            ]
+        },
         "experimentalDecorators": true
     },
     "include": [
